<!--
  ~ Copyright (c) 2018-2020 DJI
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
    <!-- Auto Exposure Lock -->
    <string name="uxsdk_auto_exposure_lock_widget_display_string">AE</string>
    
    <!-- Camera Setting Menu -->
    <string name="uxsdk_camera_setting_menu">MENU</string>
    <!-- Focus Mode -->
    <string name="uxsdk_widget_focus_mode_manual">MF</string>
    <string name="uxsdk_widget_focus_mode_auto">AF</string>
    <string name="uxsdk_widget_focus_mode_afc">AFC</string>
    <string name="uxsdk_widget_focus_mode_separator">/</string>

    <string name="uxsdk_camera_exposure_mode_p">AUTO</string>
    <string name="uxsdk_camera_exposure_mode_s">S</string>
    <string name="uxsdk_camera_exposure_mode_a">A</string>
    <string name="uxsdk_camera_exposure_mode_m">M</string>

    <string name="uxsdk_camera_exposure_iso_title">ISO</string>

    <string name="uxsdk_camera_ei">EI</string>
    <string name="uxsdk_ir">IR</string>
    <string name="uxsdk_split">Split</string>
    <string name="uxsdk_na">N/A</string>
    <string name="uxsdk_ave">Ave</string>
    <string name="uxsdk_max">Max</string>
    <string name="uxsdk_min">Min</string>
    <string name="uxsdk_entigrade">℃</string>
    <string name="uxsdk_asl">ASL</string>
    <string name="uxsdk_rng">RNG</string>
    <string name="uxsdk_temperature">℃</string>
    <string name="uxsdk_50">50</string>
    <string name="uxsdk_palette_unselect">palette_unselect</string>
    <string name="uxsdk_palette_select">palette_select</string>

    <string name="uxsdk_low_temp">Low Temp</string>
    <string name="uxsdk_high_temp">High Temp</string>
    <string name="uxsdk_infrared1_text">WhiteHotIso</string>
    <string name="uxsdk_infrared2_text">BlackHotIso</string>
    <string name="uxsdk_infrared3_text">TintIso</string>
    <string name="uxsdk_infrared4_text">MedicalIso</string>
    <string name="uxsdk_infrared5_text">RainbowIso</string>
    <string name="uxsdk_infrared6_text">IronRedIso</string>
    <string name="uxsdk_infrared7_text">ArcticIso</string>
    <string name="uxsdk_infrared8_text">FulguriteIso</string>
    <string name="uxsdk_infrared9_text">HotIronIso</string>
    <string name="uxsdk_infrared10_text">Rainbow2Iso</string>
    <string name="uxsdk_calibrate_the_lens">Calibrate the lens</string>
</resources>
