<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uxsdk_transparent"
    android:clickable="true"
    android:focusable="true"
    tools:ignore="ResourceName">

    <View
        android:id="@+id/custom_palette_background_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/uxsdk_140_dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/custom_palette_background"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/uxsdk_black_80_percent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/custom_palette_line"
        android:layout_width="0.6dp"
        android:layout_height="140dp"
        android:layout_marginStart="80dp"
        android:background="@color/uxsdk_white_20_percent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/custom_palette_background_image1"
        android:layout_width="@dimen/uxsdk_33_dp"
        android:layout_height="@dimen/uxsdk_33_dp"
        android:layout_marginTop="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/custom_palette_line"
        app:layout_constraintTop_toTopOf="@+id/custom_palette_background"
        app:srcCompat="@drawable/palette_select"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/custom_palette_background_image2"
        android:layout_width="@dimen/uxsdk_30_dp"
        android:layout_height="@dimen/uxsdk_30_dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/uxsdk_background_white_rectangle"
        android:padding="@dimen/uxsdk_3_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/custom_palette_line"
        app:layout_constraintTop_toBottomOf="@id/custom_palette_background_image1"
        app:srcCompat="@drawable/temp_unselect"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/temp_background_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/uxsdk_140_dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <dji.ux.beta.cameracore.widget.seekbar.RangeSeekBar
            android:id="@+id/sb_range_3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rsb_indicator_background_color="@color/colorTransparent"
            app:rsb_indicator_height="20dp"
            app:rsb_indicator_margin="0dp"
            app:rsb_indicator_show_mode="alwaysShow"
            app:rsb_min_interval="1"
            app:rsb_mode="range"
            app:rsb_progress_color="@color/colorProgress"
            app:rsb_progress_drawable="@drawable/uxsdk_progress"
            app:rsb_thumb_drawable="@drawable/low_temp"
            app:rsb_thumb_right_drawable="@drawable/high_temp"
            app:rsb_tick_mark_layout_gravity="bottom"
            app:rsb_tick_mark_mode="number"
            app:rsb_tick_mark_text_margin="15dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/low_temp_text"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/uxsdk_low_temp"
            android:textColor="@color/uxsdk_white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/sb_range_3"
            app:layout_constraintTop_toBottomOf="@id/sb_range_3" />

        <ImageView
            android:id="@+id/low_temp_reduce_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/uxsdk_10_dp"
            android:padding="2dp"
            android:src="@drawable/reduce"
            app:layout_constraintLeft_toRightOf="@+id/low_temp_text"
            app:layout_constraintTop_toTopOf="@+id/low_temp_text" />


        <ImageView
            android:id="@+id/low_temp_add_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/uxsdk_10_dp"
            android:src="@drawable/add"
            app:layout_constraintLeft_toRightOf="@+id/low_temp_reduce_image"
            app:layout_constraintTop_toTopOf="@+id/low_temp_text" />

        <TextView
            android:id="@+id/high_temp_text"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:gravity="center_vertical"
            android:text="@string/uxsdk_high_temp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/low_temp_add_image"
            app:layout_constraintTop_toTopOf="@id/low_temp_text" />

        <ImageView
            android:id="@+id/high_temp_reduce_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/uxsdk_10_dp"
            android:padding="2dp"
            android:src="@drawable/reduce"
            app:layout_constraintLeft_toRightOf="@+id/high_temp_text"
            app:layout_constraintTop_toTopOf="@+id/low_temp_text" />

        <ImageView
            android:id="@+id/high_temp_add_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/uxsdk_10_dp"
            android:src="@drawable/add"
            app:layout_constraintLeft_toRightOf="@+id/high_temp_reduce_image"
            app:layout_constraintTop_toTopOf="@+id/low_temp_text"
            tools:ignore="ContentDescription" />

        <Switch
            android:id="@+id/custom_widget_switch"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/uxsdk_20_dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/uxsdk_3_dp"
            android:layout_marginEnd="40dp"
            android:checked="true"
            android:thumb="@drawable/uxsdk_switch_thumb"
            android:track="@drawable/uxsdk_switch_track_selector"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/low_temp_reduce_image"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <ImageView
            android:id="@+id/reduce_min_range_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="@dimen/uxsdk_20_dp"
            android:clickable="false"
            android:src="@drawable/reduce_unselect"
            app:layout_constraintRight_toLeftOf="@id/custom_widget_switch"
            app:layout_constraintTop_toTopOf="@id/low_temp_reduce_image" />

        <ImageView
            android:id="@+id/add_max_range_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="@dimen/uxsdk_20_dp"
            android:clickable="false"
            android:src="@drawable/add_unselect"
            app:layout_constraintRight_toLeftOf="@id/reduce_min_range_btn"
            app:layout_constraintTop_toTopOf="@id/low_temp_reduce_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/palette_background_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/uxsdk_140_dp"
        android:layout_marginStart="@dimen/uxsdk_80_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <HorizontalScrollView
            android:id="@+id/palette_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="@dimen/uxsdk_20_dp"
                android:paddingEnd="@dimen/uxsdk_20_dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/infrared1_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/uxsdk_thermal_palette_wh" />

                    <TextView
                        android:id="@+id/infrared1_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/uxsdk_infrared1_text"
                        android:textColor="@color/uxsdk_white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/uxsdk_20_dp">

                    <ImageView
                        android:id="@+id/infrared2_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/uxsdk_thermal_palette_black_hot" />

                    <TextView
                        android:id="@+id/infrared2_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/uxsdk_infrared2_text"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/uxsdk_20_dp">

                    <ImageView
                        android:id="@+id/infrared3_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/uxsdk_thermal_palette_tint_red_hot" />

                    <TextView
                        android:id="@+id/infrared3_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/uxsdk_infrared3_text"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/uxsdk_20_dp">

                    <ImageView
                        android:id="@+id/infrared4_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/uxsdk_thermal_palette_medical_green_hot" />

                    <TextView
                        android:id="@+id/infrared4_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/uxsdk_infrared4_text"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/uxsdk_20_dp">

                    <ImageView
                        android:id="@+id/infrared5_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/uxsdk_thermal_palette_rainbow1" />

                    <TextView
                        android:id="@+id/infrared5_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/uxsdk_infrared5_text"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/uxsdk_20_dp">

                    <ImageView
                        android:id="@+id/infrared6_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/uxsdk_thermal_palette_iron_red" />

                    <TextView
                        android:id="@+id/infrared6_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/uxsdk_infrared6_text"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/uxsdk_20_dp">

                    <ImageView
                        android:id="@+id/infrared7_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/uxsdk_thermal_palette_arctic_ice_fire" />

                    <TextView
                        android:id="@+id/infrared7_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/uxsdk_infrared7_text"
                        android:textColor="@color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/uxsdk_20_dp">

                    <ImageView
                        android:id="@+id/infrared8_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/uxsdk_thermal_palette_bh_color1" />

                    <TextView
                        android:id="@+id/infrared8_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/uxsdk_infrared8_text"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/uxsdk_20_dp">

                    <ImageView
                        android:id="@+id/infrared9_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/uxsdk_thermal_palette_hot_iron_color2" />

                    <TextView
                        android:id="@+id/infrared9_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/uxsdk_infrared9_text"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/uxsdk_20_dp">

                    <ImageView
                        android:id="@+id/infrared10_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/uxsdk_thermal_palette_rainbow2" />

                    <TextView
                        android:id="@+id/infrared10_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/uxsdk_infrared10_text"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
