<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018-2020 DJI
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="500dp"
    android:layout_height="100dp"
    tools:parentTag="dji.ux.beta.cameracore.widget.cameraexposuremodesetting.CameraExposureModeSettingWidget">

    <View
        android:id="@+id/view_camera_mode_p_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/uxsdk_selector_camera_exposure_mode_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/textview_camera_mode_p"
        app:layout_constraintRight_toRightOf="@+id/textview_camera_mode_p"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_camera_mode_p"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/uxsdk_camera_exposure_mode_p"
        android:textColor="@drawable/uxsdk_selector_camera_exposure_mode_text_color"
        app:autoSizeMinTextSize="@dimen/uxsdk_text_size_tiny"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/imageview_camera_mode_p"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textview_camera_mode_s"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageview_camera_mode_p"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/uxsdk_selector_camera_auto_exposure_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="@+id/textview_camera_mode_p"
        app:layout_constraintRight_toRightOf="@+id/textview_camera_mode_p"
        app:layout_constraintTop_toBottomOf="@+id/textview_camera_mode_p"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view_camera_mode_s_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/uxsdk_selector_camera_exposure_mode_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textview_camera_mode_p"
        app:layout_constraintRight_toLeftOf="@+id/textview_camera_mode_a"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_camera_mode_s"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/uxsdk_camera_exposure_mode_s"
        android:textColor="@drawable/uxsdk_selector_camera_exposure_mode_text_color"
        app:autoSizeMinTextSize="@dimen/uxsdk_text_size_tiny"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_camera_mode_p"
        app:layout_constraintLeft_toRightOf="@+id/textview_camera_mode_p"
        app:layout_constraintRight_toLeftOf="@+id/textview_camera_mode_a"
        app:layout_constraintTop_toTopOf="@+id/textview_camera_mode_p" />

    <View
        android:id="@+id/view_camera_mode_a_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/uxsdk_selector_camera_exposure_mode_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textview_camera_mode_s"
        app:layout_constraintRight_toLeftOf="@+id/textview_camera_mode_m"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_camera_mode_a"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/uxsdk_camera_exposure_mode_a"
        android:textColor="@drawable/uxsdk_selector_camera_exposure_mode_text_color"
        app:autoSizeMinTextSize="@dimen/uxsdk_text_size_tiny"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_camera_mode_p"
        app:layout_constraintLeft_toRightOf="@+id/textview_camera_mode_s"
        app:layout_constraintRight_toLeftOf="@+id/textview_camera_mode_m"
        app:layout_constraintTop_toTopOf="@+id/textview_camera_mode_p" />

    <View
        android:id="@+id/view_camera_mode_m_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/uxsdk_selector_camera_exposure_mode_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textview_camera_mode_a"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_camera_mode_m"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/uxsdk_camera_exposure_mode_m"
        android:textColor="@drawable/uxsdk_selector_camera_exposure_mode_text_color"
        app:autoSizeMinTextSize="@dimen/uxsdk_text_size_tiny"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_camera_mode_p"
        app:layout_constraintLeft_toRightOf="@+id/textview_camera_mode_a"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_camera_mode_p" />

</merge>